
name: misc-tools
version: 1.0.3
cabal-version: >=1.2
build-type: Simple
license: GPL-2
license-file: "LICENSE"
description:  
author: Thomas Koehler
data-dir: ""
 
library
    build-depends: 
      base -any, 
      binary -any,
      directory -any, 
      filepath -any, 
      regex-posix -any,
      template-haskell -any, 
      bytestring -any, 
      resourcet -any, 
      transformers -any, 
      stringsearch -any,
      indents -any,
      parsec -any,
      mtl -any

    exposed-modules: 
      Data.Enum.TH 
      Data.Tools 
      System.Filesystem
      Data.RecordModel.Parser

    exposed: True
    buildable: True
    hs-source-dirs: src
    ghc-options: -Wall -O2
 
test-suite test-MiscTools
    build-depends: 
      base -any, 
      binary -any, 
      HUnit >= 1.2 && < 2, 
      HTF, temporary,
      directory -any, 
      filepath -any, 
      regex-posix -any,
      template-haskell -any, 
      bytestring -any, 
      resourcet -any, 
      transformers -any, 
      stringsearch -any

    type: exitcode-stdio-1.0
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    ghc-options: -Wall -O2
